--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ probability_hse_exams.xdv
 *.fls
 *.log
 chapters/.DS_Store
+auto_figures_tikz/2012_2013_fig_02_empirical_dist.xdv
+auto_figures_tikz/2014_2015_fig_01_dlogis.xdv
+chapters/.DS_Store
