--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ chapters/.DS_Store
 auto_figures_tikz/2012_2013_fig_02_empirical_dist.xdv
 auto_figures_tikz/2014_2015_fig_01_dlogis.xdv
 chapters/.DS_Store
+materials/min_kr2/main.xdv
