--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ auto_figures_tikz/2012_2013_fig_02_empirical_dist.xdv
 auto_figures_tikz/2014_2015_fig_01_dlogis.xdv
 materials/min_kr2/main.xdv
 _minted-probability_hse_exams/
+*.xdv
