--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ auto_figures_tikz/2014_2015_fig_01_dlogis.xdv
 materials/min_kr2/main.xdv
 _minted-probability_hse_exams/
 *.xdv
+materials/min_kr3.zip
