--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ materials/min_kr2/main.xdv
 _minted-probability_hse_exams/
 *.xdv
 materials/min_kr3.zip
+materials/2017_2018/2017-18-probability_kr2/main.synctex.gz
+materials/2017_2018/kr2_ip_celebration/main.synctex.gz
